# selah

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  bump-version.sh  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
crates/selah-ai/: Cargo.toml
crates/selah-ai/src/: lib.rs
crates/selah-annotate/: Cargo.toml
crates/selah-annotate/src/: lib.rs
crates/selah-capture/: Cargo.toml
crates/selah-capture/src/: history.rs  lib.rs
crates/selah-core/: Cargo.toml
crates/selah-core/src/: lib.rs
crates/selah-mcp/: Cargo.toml
crates/selah-mcp/src/: lib.rs
docs/: README.md  architecture.md  development.md  mcp-tools.md  roadmap.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh  version-bump.sh
src/: ai.rs  annotate.rs  capture.rs  core.rs  daimon.rs  error.rs  geometry.rs  gui.rs  history.rs  lib.rs  main.rs  mcp.rs
tests/: integration.rs
