[package]
name = "selah"
version = "0.24.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "AI-native screenshot capture, annotation, and redaction library for AGNOS"
homepage = "https://github.com/MacCracken/selah"
repository = "https://github.com/MacCracken/selah"
readme = "README.md"
documentation = "https://docs.rs/selah"
keywords = ["screenshot", "annotation", "redaction", "mcp", "agnos"]
categories = ["multimedia::images"]
exclude = [".claude/", ".github/", "docs/", "scripts/", "crates/"]

[lib]
name = "selah"
path = "src/lib.rs"

[dependencies]
hisab = { path = "../hisab" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
image = "0.25"
ranga = { path = "../ranga" }
base64 = "0.22"
bote = { path = "../bote", optional = true }

[features]
default = []
mcp = ["dep:bote"]

[dev-dependencies]
serde_json = "1"
bote = { path = "../bote" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[[bench]]
name = "benchmarks"
harness = false
