[package]
name = "selah-ai"
version = "2026.3.16"
edition = "2024"
description = "AI features for Selah — OCR, PII detection, smart crop"
license = "GPL-3.0"

[dependencies]
selah-core = { path = "../selah-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
