[package]
name = "selah-capture"
version = "2026.3.16"
edition = "2024"
description = "Screen capture API client for Selah — connects to daimon"
license = "GPL-3.0"

[dependencies]
selah-core = { path = "../selah-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
