[package]
name = "selah-core"
version = "2026.3.17"
edition = "2024"
description = "Core types and primitives for Selah screenshot tool"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
